@@ -1,4 +1,4 @@
-/* $Id: libidn.c,v 1.6 2011-02-18 09:50:21 oops Exp $ */
+/* $Id: libidn.c,v 1.7 2011-02-18 18:08:32 oops Exp $ */
 #include <oc_common.h>
 #include <libidn.h>
 
@@ -8,76 +8,6 @@
 
 #ifdef EANBLE_NLS
 #include <langinfo.h>
-#endif
-
-char * decode_race (char *domain, char *charset, int debug);
-char * encode_race (char *domain, char *charset, int debug);
-int permit_extension (char *tail);
-void strtolower (char *str);
-
-#ifdef HAVE_ICONV_H
-char * convert_racecode (char * domain, int mode, int debug) {
-	const char delimiters[] = ".";
-	static char retconv[1024];
-	char conv[512];
-	char charset[32];
-	char chkname[512];
-	char *token, *btoken;
-	int len = strlen (domain);
-
-	if ( len > 512 )
-		return domain;
-
-	memset (retconv, 0, 1024);
-	memset (chkname, 0, 32);
-	memset (charset, 0, 32);
-	memset (conv, 0, 512);
-
-#ifdef HAVE_LIBIDN
-	strcpy (charset, stringprep_locale_charset ());
-#else
-	strcpy (charset, "EUC-KR");
-#endif
-
-	/* convert to low case */
-	strtolower ( domain );
-
-	token = strtok_r ( domain, delimiters, &btoken );
-
-	if ( token == NULL ) {
-		char tmpval[512] = { 0, };
-
-		if ( ! mode )
-			strcpy (tmpval, encode_race (chkname, charset, debug));
-		else
-			strcpy (tmpval, decode_race (chkname, charset, debug));
-
-		sprintf ( retconv, "%s.", tmpval );
-	} else {
-		while ( token != NULL ) {
-			char tmpval[512] = { 0, };
-			memset (conv, 0, 512);
-
-			if ( ! mode )
-				strcpy (tmpval, encode_race (token, charset, debug));
-			else
-				strcpy (tmpval, decode_race (token, charset, debug));
-
-			sprintf ( conv, "%s.", tmpval );
-			strcat ( retconv, conv );
-			token = strtok_r ( NULL, delimiters, &btoken );
-		}
-	}
-
-	memset ( retconv + strlen(retconv) - 1, 0, 1);
-
-	return retconv;
-}
-#else
-char * convert_racecode (char * domain, int mode, int debug) {
-	fprintf (stderr, "ERROR: olibc compiled without iconv library\n");
-	return domain;
-}
 #endif
 
 /*
