@@ -1,6 +1,9 @@
 Changelog
 
-$Id: Changes,v 1.58 2011-02-15 09:38:49 oops Exp $
+$Id: Changes,v 1.59 2011-02-18 18:08:32 oops Exp $
+
+* Sat, Feb 19 2011
+	- remove convert_racecode api
 
 * Tue, Feb 15 2011
 	- add charset_conv
